# pandoc-minted

./: .gitignore  LICENSE.txt  Makefile  README.md  example.md  pandoc-minted.py  pandoc_minted.py  pyproject.toml  setup.cfg
.github/workflows/: main.yml
