[tool.poetry]
name = "pandoc-minted"
version = "1.0.0"
description = "A pandoc filter to use minted for typesetting code in the LaTeX mode."
authors = ["Yury Bayda <yury@bayda.pro>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "pandoc_minted"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
flake8 = "^6.0.0"
flake8-bugbear = "^22.10.27"
isort = "^5.10.1"
pep8-naming = "^0.13.2"

[tools.black]
line-length = 100

[tools.isort]
line_length = 100
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
