[tool.poetry]
name = "pandoc-minted"
version = "1.0.0"
description = "A pandoc filter to use minted for typesetting code in the LaTeX mode."
authors = ["Yury Bayda <yury@bayda.pro>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "pandoc_minted"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.3"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    # pyflakes
    "F",
    # pycodestyle
    "E", "W",
    # pydocstyle
    "D2", "D3", "D4",
    # isort
    "I",
    # pep8-naming
    "N",
    # pyupgrade
    "UP",
    # flake8-2020
    "YTT",
    # flake8-async
    "ASYNC",
    # flake8-bugbear
    "B",
    # flake8-comprehensions
    "C4",
    # flake8-executable
    "EXE",
    # flake8-pie
    "PIE",
    # flake8-pyi
    "PYI",
    # flake8-raise
    "RSE",
    # flake8-return
    "RET",
    # flake8-simplify
    "SIM",
    # flake8-type-checking
    "TCH",
    # mccabe
    "C90",
    # eradicate
    "ERA",
    # flynt
    "FLY",
    # pylint
    "PLC", "PLE", "PIE",
    # tidy imports
    "TID",
    # Perflint
    "PERF",
    # Ruff-specific
    "RUF"
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
